--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ html {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 30px;
   font-family: "Barlow", sans-serif;
+  text-align: center;
 }
 h3 {
   font-size: 25px;
   font-family: "Barlow", sans-serif;
-  font-weight: bold;
 }
 /* Navigation  */
 nav {
@@ -26,7 +26,7 @@ nav {
   align-items: center;
   font-size: 15px;
   flex-direction: column;
-  padding: 2px;
+  padding: 2px 0;
 }
 
 nav a {
@@ -36,7 +36,7 @@ nav a {
 }
 
 nav a:hover {
-  color: red;
+  color: #e0cbc4;
   text-decoration: underline;
 }
 /* Home Section */
@@ -52,7 +52,7 @@ nav a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .logo-img {
@@ -75,26 +75,25 @@ nav a:hover {
   text-align: center;
   width: 100%;
   height: 300px;
-  padding: 2px;
+  padding: 2px 0;
 }
 
-#titleBlocksA {
+#titleBlocks {
   color: #131310;
+  background-color: #ebe4de;
   width: 100%;
-  height: 3vh;
-  padding: 3vh;
+  height: fit-content;
+  padding: 5px 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
 }
 
 /* Featured Section  */
 .postImg {
   background-color: white;
   display: flex;
-  height: 30vh;
-  width: 50%;
+  width: 100%;
   /* flex: 0 1 50px; */
 }
 
@@ -106,34 +105,35 @@ nav a:hover {
 
 /* Team Section */
 /* #ourTeam-div {
-  display: flex;
-  /* justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  width: 75%; 
+  align-items: center;
 } */
 
 #teamList {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  flex: 0 0 auto;
+  width: 100%;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+  /* flex: 0 0 auto; */
+}
+.owner-img {
+  height: 20vh;
+  align-items: center;
 }
 .teamMember-img {
-  width: 100%;
-  height: 30vh;
+  height: 20vh;
 }
 
 /* Retail Section */
 #retailImageGallery {
   background-color: white;
-  padding: 2px;
+  padding: 2px 0;
   display: flex;
-  flex: 0 0 auto;
+  /* flex: 0 0 auto; */
   justify-content: space-evenly;
 }
 .retail-img {
   height: 30vh;
+  width: 100%;
 }
 
 /* Contact Us Section */
@@ -144,33 +144,5 @@ nav a:hover {
 
 /* Media Query
 @media (max-width: 500px) {
-  body {
-    background-color: #e0cbc4;
-  }
-  #titleBlocks {
-    height: 3vh;
-  }
-  /* #aboutBox {
-    height: 25vh;
-    padding: 2px;
-    vertical-align: middle;
-  } 
-  .postImg {
-    background-color: white;
-    width: 100%;
-    height: 30vh;
-    margin: 0 auto;
-  }
-  .teamMember-img {
-    background-color: white;
-    width: 100%;
-    height: 30vh;
-    margin: 0 auto;
-  }
-  .retail-img {
-    background-color: white;
-    width: 100%;
-    height: 30vh;
-    margin: 0 auto;
-  }
+
 } */
