--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ nav a:hover {
   background-color: white;
   width: 100%;
   height: fit-content;
+  padding-bottom: 4px;
 }
 /* Work Examples Section */
 .work-img {
@@ -111,6 +112,8 @@ nav a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: white;
+  padding: 4px;
 }
 
 /* Team Section */
@@ -122,11 +125,14 @@ nav a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: white;
+  padding: 4px;
 }
 #owner {
   display: flex;
   justify-content: center;
-  padding: 4px;
+  background-color: white;
+  padding-top: 6px;
 }
 .owner-img {
   height: 25vh;
@@ -138,11 +144,15 @@ nav a:hover {
 }
 
 /* Retail Section */
+#retail-div {
+  background-color: white;
+  justify-content: center;
+  padding: 4px;
+}
 #retailImageGallery {
   background-color: white;
   padding: 2px 0;
   display: flex;
-  /* flex: 0 0 auto; */
   justify-content: space-evenly;
 }
 .retail-img {
@@ -150,10 +160,68 @@ nav a:hover {
   width: 100%;
 }
 
+#retailSub-div {
+  color: #131310;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Contact Us Section */
-#contactUs-div {
+#contactUs-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  padding: 4px;
+}
+#contactBlock {
   background-color: white;
   text-align: center;
+}
+#userName,
+#userEmail,
+#userPhone {
+  background-color: white;
+  color: #9b9a94;
+  text-align: left;
+  width: 200px;
+  font-size: 15px;
+  padding-bottom: 2px;
+  padding-top: 4px;
+  font-family: "Barlow", sans-serif;
+}
+#userMessage {
+  background-color: white;
+  color: #9b9a94;
+  text-align: left;
+  width: 200px;
+  height: 100px;
+  padding-top: 4px;
+  font-size: 15px;
+  font-family: "Barlow", sans-serif;
+}
+#formSubmit {
+  background-color: #e0cbc4;
+  color: white;
+  font-family: "Barlow", sans-serif;
+  font-size: 20px;
+  height: fit-content;
+  padding: 10px;
+  width: 210px;
+}
+
+/* Footer */
+#footer {
+  background-color: #9b9a94;
+  color: white;
+  height: fit-content;
+  padding: 4px;
+  width: 100%;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
 }
 
 /* Media Query
