--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 15px;
+  font-size: 20px;
   flex-direction: column;
   padding: 2px 0;
 }
@@ -86,26 +86,36 @@ nav a:hover {
   padding: 5px 0;
   display: flex;
   align-items: center;
+  vertical-align: center;
   justify-content: center;
 }
 
 /* Featured Section  */
+#featured-section {
+  background-color: white;
+  margin: 0;
+}
 .postImg {
   background-color: white;
   display: flex;
   width: 100%;
-  /* flex: 0 1 50px; */
 }
 
 .caption {
   background-color: white;
   width: 100%;
-  height: fit-content;
-  padding-bottom: 4px;
+  height: 300px;
+  padding: 0;
+  border-bottom: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /* Work Examples Section */
 .work-img {
+  display: block;
   height: 20vh;
+  width: auto;
 }
 
 #ourWork-div {
