--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav a:hover {
 }
 
 .logo-img {
-  max-width: 40%;
+  width: 60%;
   border-radius: 8px;
 }
 
@@ -105,7 +105,8 @@ nav a:hover {
   background-color: white;
   width: 100%;
   height: 300px;
-  padding: 0;
+  margin-right: 2px;
+  margin-left: 2px;
   border-bottom: 0;
   margin-bottom: 0;
   overflow: hidden;
@@ -178,48 +179,45 @@ nav a:hover {
   justify-content: center;
 }
 
-/* Contact Us Section */
-#contactUs-section {
+/* Subscribe Section */
+#subscribe-section {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   background-color: white;
   padding: 4px;
 }
-#contactBlock {
+#subscribe-form {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+  align-content: center;
   background-color: white;
-  text-align: center;
+  padding: 10px;
 }
-#userName,
-#userEmail,
-#userPhone {
-  background-color: white;
-  color: #9b9a94;
-  text-align: left;
-  width: 200px;
-  font-size: 15px;
-  padding-bottom: 2px;
-  padding-top: 4px;
-  font-family: "Barlow", sans-serif;
-}
-#userMessage {
+
+#userEmail {
   background-color: white;
   color: #9b9a94;
   text-align: left;
   width: 200px;
-  height: 100px;
-  padding-top: 4px;
-  font-size: 15px;
+  font-size: 20px;
   font-family: "Barlow", sans-serif;
 }
-#formSubmit {
+
+#formSubscribe {
   background-color: #e0cbc4;
   color: white;
   font-family: "Barlow", sans-serif;
   font-size: 20px;
   height: fit-content;
-  padding: 10px;
-  width: 210px;
+  width: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  border: 0;
+  padding: 5px;
 }
 
 /* Footer */
