--- a/style.css
+++ b/style.css
@@ -245,13 +245,14 @@ nav a:hover {
     flex-direction: row;
     justify-content: space-evenly;
     padding: 5px;
+    font-size: 25px;
   }
   #home-div {
-    height: 500px;
+    height: 700px;
   }
 
   .logo-img {
-    width: 30%;
+    width: 400px;
   }
   h2 {
     font-size: 45px;
@@ -265,7 +266,7 @@ nav a:hover {
     font-size: 30px;
     font-family: "Barlow", sans-serif;
   }
-  #aboutUS-section {
+  #aboutUS-Sub {
     width: 100%;
     display: flex;
     align-self: center;
@@ -280,38 +281,31 @@ nav a:hover {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 33%;
+    width: 50%;
     height: 400px;
-  }
-  #titleBlocks_A {
-    height: 400px;
-    width: 36%;
-    align-items: center;
-    vertical-align: middle;
   }
 
-  #featured-section {
+  #featured-subSection {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     width: 100%;
-    height: 400px;
+    height: fit-content;
   }
   .postImg {
-    height: 400px;
-    width: 425px;
+    height: 900px;
+    /* width: 50%; */
   }
 
   .caption {
-    height: 360px;
-    width: 36%;
+    width: 50%;
     margin: 0;
     text-align: center;
     padding-top: 40px;
-    padding-right: 3px;
   }
   .work-img {
     height: 400px;
     width: 300px;
+    padding: 40px;
   }
 
   #ourWork-div {
@@ -320,32 +314,34 @@ nav a:hover {
     padding: 25px;
   }
   .owner-img {
-    height: 300px;
-    width: 300px;
-    padding: 25px;
+    height: 400px;
+    width: 400px;
+    padding: 100px;
   }
   .teamMember-img {
-    height: 300px;
-    width: 300px;
-    padding: 25px;
+    height: 400px;
+    width: 400px;
+    padding: 100px;
   }
   #owner {
     padding: 0px;
   }
   #teamList {
     justify-content: space-evenly;
-    padding: 25px;
+    vertical-align: middle;
+    /* padding: 25px; */
   }
+
   .retail-img {
     height: 300px;
     width: 100%;
     padding: 25px;
   }
 }
+
 @media (min-width: 390px) and (max-width: 769px) {
   .owner-img {
     height: 20vh;
-    padding: 0px;
   }
   #owner {
     padding: 0px;
