--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav a:hover {
 }
 
 .logo-img {
-  width: 60%;
+  width: 40%;
   border-radius: 8px;
 }
 
@@ -113,11 +113,13 @@ nav a:hover {
 }
 /* Work Examples Section */
 .work-img {
-  display: block;
-  height: 20vh;
-  width: auto;
+  height: 250px;
+  width: 187px;
+  padding: 10px;
 }
 
+/* Team Section */
+#teamList,
 #ourWork-div {
   display: flex;
   flex-wrap: wrap;
@@ -126,25 +128,6 @@ nav a:hover {
   padding: 4px;
 }
 
-/* Team Section */
-#teamList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  background-color: white;
-  padding: 4px;
-}
-#owner {
-  display: flex;
-  justify-content: center;
-  background-color: white;
-  padding-top: 6px;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-.owner-img {
-  height: 25vh;
-}
 .teamMember-img {
   height: 20vh;
   padding-right: 2px;
@@ -239,7 +222,7 @@ nav a:hover {
 }
 
 /* Media Query */
-@media (min-width: 770px) {
+@media screen and (min-device-width: 1100px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
   nav {
     display: flex;
     flex-direction: row;
@@ -305,7 +288,7 @@ nav a:hover {
   .work-img {
     height: 400px;
     width: 300px;
-    padding: 40px;
+    padding: 20px;
   }
 
   #ourWork-div {
@@ -313,19 +296,13 @@ nav a:hover {
     flex: 2;
     padding: 25px;
   }
-  .owner-img {
-    height: 400px;
-    width: 400px;
-    padding: 100px;
-  }
+
   .teamMember-img {
     height: 400px;
     width: 400px;
-    padding: 100px;
+    padding: 25px;
   }
-  #owner {
-    padding: 0px;
-  }
+
   #teamList {
     justify-content: space-evenly;
     vertical-align: middle;
@@ -336,14 +313,5 @@ nav a:hover {
     height: 300px;
     width: 100%;
     padding: 25px;
-  }
-}
-
-@media (min-width: 390px) and (max-width: 769px) {
-  .owner-img {
-    height: 20vh;
-  }
-  #owner {
-    padding: 0px;
   }
 }
