--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ nav a:hover {
 }
 
 /* Media Query */
-@media screen and (min-device-width: 1100px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (min-device-width: 1100px) and (-webkit-min-device-pixel-ratio: 1) {
   nav {
     display: flex;
     flex-direction: row;
