--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ h3 {
   background-color: #ebe4de;
   width: 100%;
   height: fit-content;
-  padding: 5px 0;
+  /* padding: 5px 0; */
+  margin: 0;
   display: flex;
   align-items: center;
   vertical-align: center;
@@ -214,7 +215,7 @@ nav a:hover {
   background-color: #9b9a94;
   color: white;
   height: fit-content;
-  padding: 4px;
+  /* padding: 4px; */
   width: 100%;
   font-size: 15px;
   display: flex;
